--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - MYSQL_PASSWORD=sqlpass
     volumes:
       - ./mysql-data:/var/lib/mysql
+      - ./mysql-config:/etc/mysql/mariadb.conf.d
     ports:
       - 3306:3306
   frontend:
@@ -27,6 +28,6 @@ services:
     stdin_open: true
     restart: always
     volumes:
-      - ./api-data:/app
+      - ./api-data:/api
     ports:
       - 8000:8000
